# webidl-napi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.js  package.json  webidl-napi-inl.h  webidl-napi.h
.github/workflows/: test-linux.yml  test-macos.yml  test-windows.yml
test/: build.js  index.js
test/class/: CMakeLists.txt  class-impl.cc  class-impl.h  class.idl  init.cc  test.js
test/promise/: CMakeLists.txt  init.cc  promise-impl.cc  promise-impl.h  promise.idl  test.js
test/webgpu/: CMakeLists.txt  binding.gyp  init.cc  test.js  webgpu-impl.cc  webgpu-impl.h  webgpu.idl
test/webidl2_example/: CMakeLists.txt  binding.gyp  example-impl.cc  example-impl.h  example.idl  init.cc  test.js
